--- a/CoffeeMaster/coffee.html
+++ b/CoffeeMaster/coffee.html
@@ -14,3 +14,15 @@
  بمتجر القهوة المفضل لديك وقم باللازم Caribouاستبدل محمد باسمك و
     
 -->
+<!DOCTYPE html>
+
+<head>
+
+    <title>Document</title>
+</head>
+<body>
+    <h1> مرحبا، أنا إبراهيم</h1> <br>
+    <h1>قهوتي المفضلة أحصل عليها من Caribou</h1> <br>
+    
+</body>
+</html>
